--- a/mysite/polls/templates/email/detail.html
+++ b/mysite/polls/templates/email/detail.html
@@ -1,3 +1,5 @@
+
+<a href="{% url 'polls:edit-email' email.pk %}">edit</a><br>
 {{ email.from_email }} <br>
 {{ email.to_email }} <br>
 {{ email.subject }} <br>
